# gsoc2020-CGAL-Octree-benchmark-plots

./: CMakeLists.txt  README.md  benchmark.h  construction_benchmark.cpp  main.cpp  plotting.h  search_benchmark.cpp
